# noland

./: .env.example  .gitignore  .nvmrc  .python-version  README.md  activate.sh  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  turbo.json
api/: .env.example  README.md  env.py  main.py  pyproject.toml
api/agents/: __init__.py  keywords.py  models.py  prompt.py  reader.py  references.py  summarizer.py  web.py  wiki.py
migrations/: 01_create_references_table.json  02_references_table_content.json  03_create_keywords_table.json  04_create_references_keywords_table.json
src/app/: layout.tsx
src/app/chat/: page.tsx
src/app/notes/: page.tsx
src/app/references/: page.tsx
src/app/references/[reference_id]/: page.tsx
src/app/settings/: page.tsx
src/components/: Chat.tsx  Menu.tsx  Sidebar.tsx
src/components/references/: ActionButton.tsx  AddReferenceForm.tsx  ReferenceCard.tsx  ReferenceContents.tsx  ReferencesList.tsx  TagCloud.tsx
src/components/ui/: TagCloud.tsx
src/lib/: config.ts
